syntax = "proto3";
package task;

import "google/protobuf/timestamp.proto";
import "infra/qscheduler/qslib/types/vector/vector.proto";

// Request represents a requested task in the queue, and refers to the
// quota account to run it against. This representation intentionally
// excludes most of the details of a Swarming task request.
message Request {
  string id = 1;

  string account_id = 2;

  google.protobuf.Timestamp enqueue_time = 3;

  // The set of Provisionable Labels for this task.
  repeated string labels = 4;
}

// Running represents a task that has been assigned to a worker and is
// now running.
message Run {
  // The total cost that has been incurred on this task while running.
  vector.Vector cost = 1;

  // The request that this running task corresponds to.
  Request request = 2;

  // The current priority level of the running task.
  int32 priority = 3;
}
